       * [OPENJPA-311] - Problem loading classes with OSGi classloaders
       * [OPENJPA-312] - derby fails with duplicate primary key(s) in group
         by list
       * [OPENJPA-313] - list of objects returned by query partially correct
       * [OPENJPA-314] - Unenhanced complex id in MappedSuperclass causes NPE
       * [OPENJPA-315] - Unenhanced generated id field of a primitive wrapper
         type causes NPE
       * [OPENJPA-320] - Do not use System Tables (SYS*) with DB2
       * [OPENJPA-321] - DB2 ABS Casting problem
       * [OPENJPA-322] - Timezone on the Calendar object lost in proxying
       * [OPENJPA-323] - Cleanup some message text

Sub-task

       * [OPENJPA-279] - Fixed missing lookup for non-jta-data-source in
         JDBCConfigurationImpl.
       * [OPENJPA-297] - Lazy loading must be ignored in certain unenhanced
         cases
       * [OPENJPA-298] - Miscellaneous documentation improvements
       * [OPENJPA-299] - Provide a means to enable the old enhancing agent

Improvements

       * [OPENJPA-259] - Ability to parse EJB QL multiline queries in orm.xml
       * [OPENJPA-266] - Add Extensibility: Change "private" field/method to
         "protected" or "public" in OpenJPA classes to be extendable
       * [OPENJPA-275] - Bulk updates: version information should be
         automatically maintained when the query does not

New Feature

       * [OPENJPA-168] - sql optimize n rows query hint
       * [OPENJPA-239] - Option for the reverse mapping tool to generate
         mapping annotations
       * [OPENJPA-262] - Event notification of BrokerFactory creation
       * [OPENJPA-263] - Introducing getAll(List) method for data cache to be
         called by loadAll() will allow data cache plug-ins to leverage the
         advantage of any third-party cache that provides a way to get
         multiple object in one call by providing a list of keys (oids).
       * [OPENJPA-317] - API formalization pre-1.0