@@ -275,6 +275,8 @@ Additional testing done for release 0.9.7
 </li>
 <li>[<a href='http://issues.apache.org/jira/browse/OPENJPA-323'>OPENJPA-323</a>] - Cleanup some message text
 </li>
+<li>[<a href='http://issues.apache.org/jira/browse/OPENJPA-256'>OPENJPA-256</a>] - java.lang.ClassNotFoundException: org.apache.openjpa.util.CacheMap in a jetty spring environment
+</li>
 </ul>
 
 <h2> Sub-task
